tests/ui/derive-arbitrary/non_arbitrary_field/expected
error[E0277]: the trait bound `NotArbitrary: kani::Arbitrary` is not satisfied
|\
|     not_arbitrary: NotArbitrary,\
|     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `kani::Arbitrary` is not implemented for `NotArbitrary`

Error: "Failed to compile crate."
